메뉴 이모지 제거 및 최신 상태 반영

--- a/hosoin_editor_complete_v2 (1).html
+++ b/hosoin_editor_complete_v2 (1).html
@@ -845,7 +845,7 @@
 
     <!-- 메인 메뉴 -->
     <div id="mainMenu">
-        <div class="menu-title">✨ 원하는 기능을 선택하세요</div>
+        <div class="menu-title">원하는 기능을 선택하세요</div>
         
         <div class="menu-grid">
             <div class="menu-card" onclick="openFeature('ratio')">
