--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0; url=hosoin_editor_complete_v2%20(1).html">
+    <meta http-equiv="refresh" content="0; url=editor.html">
     <title>호소인 에디터</title>
 </head>
 <body>
-    <p>이동 중입니다... <a href="hosoin_editor_complete_v2%20(1).html">여기를 클릭하세요</a></p>
+    <p>이동 중입니다... <a href="editor.html">여기를 클릭하세요</a></p>
 </body>
 </html>
