--- a/editor.html
+++ b/editor.html
@@ -274,6 +274,31 @@
             position: relative;
             z-index: 1;
         }
+        .menu-card-photo {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+        .menu-card-photo .menu-photo-slot {
+            width: 95%;
+            height: 95%;
+            min-height: 90px;
+            margin: 0;
+            padding: 0;
+            border: none;
+            background: transparent;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            position: relative;
+            z-index: 1;
+        }
+        .menu-card-photo .menu-photo-slot img {
+            width: 100%;
+            height: 100%;
+            object-fit: contain;
+            object-position: center;
+        }
 
         /* 각 기능 화면 (기본 숨김) */
         .feature-screen {
@@ -887,6 +912,11 @@
                 <div class="menu-icon"><svg class="icon-svg" width="42" height="42"><use href="#icon-square-scissors"/></svg></div>
                 <div class="menu-label">이미지 자르기</div>
                 <div class="menu-desc">원하는 부분만<br>손쉽게 자르기</div>
+            </div>
+            <div class="menu-card menu-card-photo" onclick="window.open('https://www.youtube.com/@siinseon', '_blank')">
+                <div class="menu-photo-slot">
+                    <img id="menuYoutubeImg" src="menu_youtube.png" alt="유튜브">
+                </div>
             </div>
         </div>
     </div>
@@ -1611,6 +1641,7 @@
             </div>
         </div>
     </div>
+
 </div>
 
 <script>
